internal/xds/translator/testdata/out/xds-ir/cors-from-httpcorsfilter.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: first-listener/*
    routes:
    - match:
        path: foo/bar
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.cors:
          '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
          allowCredentials: false
          allowMethods: GET
          allowOriginStringMatch:
          - exact: https://gateway.envoyproxy.io
          forwardNotMatchingPreflights: false
